<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    <data>-->
<!--        <variable-->
<!--            name="password"-->
<!--            type="com.mooveall.ui.resetPassword.ResetPasswordViewModel" />-->
<!--    </data>-->

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <include
                android:id="@+id/included_toolbar"
                layout="@layout/layout_toolbar" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dp20">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp10"
                        android:src="@drawable/key" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp10"
                        android:padding="@dimen/dp10"
                        android:text="@string/label_reset_password"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/dp10"
                        android:text="@string/enter_password_below"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_17sp" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/old_password_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp20"
                        app:passwordToggleEnabled="true"
                        android:textColorHint="@color/white"
                        app:passwordToggleTint="@android:color/white"
                        >

                        <EditText
                            android:id="@+id/old_password_edtTxt"
                            style="@style/signup_edit_text"
                            android:drawableStart="@drawable/lock_icon"
                            android:drawableLeft="@drawable/lock_icon"
                            android:hint="@string/old_password"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:inputType="textPassword"
                            android:maxLength="14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp20"
                        android:textColorHint="@color/white"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@android:color/white">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/new_password_edtTxt"
                            style="@style/signup_edit_text"
                            android:drawableStart="@drawable/lock_icon"
                            android:drawableLeft="@drawable/lock_icon"
                            android:hint="@string/new_password"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp20"
                        android:textColorHint="@color/white"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@android:color/white">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/confirm_password_edtTxt"
                            style="@style/signup_edit_text"
                            android:drawableStart="@drawable/lock_icon"
                            android:drawableLeft="@drawable/lock_icon"
                            android:hint="@string/confirm_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:maxLength="14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/forgot_password_txtVw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:paddingLeft="@dimen/dp20"
                        android:paddingTop="@dimen/dp10"
                        android:paddingBottom="@dimen/dp10"
                        android:text="@string/label_forgot_password"
                        android:textColor="#ffffffff"
                        android:textSize="@dimen/text_size_13_5sp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/submit_btn"
                        style="@style/btn_style"
                        android:layout_marginTop="@dimen/dp23"
                        android:background="@android:color/white"
                        android:text="@string/next" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <include
            android:id="@+id/loading_view"
            layout="@layout/layout_loader"
            android:visibility="gone"/>

    </FrameLayout>
</layout>