<?xml version="1.0" encoding="utf-8"?>
<layout>

<!--    <data>-->
<!--        <variable-->
<!--            name="model"-->
<!--            type="com.mooveall.ui.forgotPassword.ForgotPasswordViewModel" />-->
<!--    </data>-->

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <include
                android:id="@+id/included_toolbar"
                layout="@layout/layout_toolbar" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:scrollbarThumbVertical="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/key" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/lbl_mobile_length"
                        android:textColor="@android:color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/dp10"
                        android:text="@string/enter_registered_number"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_17sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:layout_marginTop="@dimen/dp20">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/user_mobile_num_edtTxt"
                            style="@style/signup_edit_text"
                            android:hint="@string/mobile_no"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:maxLength="10" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/submit_btn"
                        style="@style/btn_style"
                        android:layout_marginTop="@dimen/dp23"
                        android:background="@android:color/white"
                        android:text="@string/submit" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <include
            android:id="@+id/loading_view"
            layout="@layout/layout_loader"
            android:visibility="gone"/>

    </FrameLayout>
</layout>