<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <data>-->

<!--        <variable-->
<!--            name="loginHandelar"-->
<!--            type="tour.traveling.travel.ui.login.LoginHnadelar" />-->
<!--    </data>-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="300dp"
                android:layout_height="360dp"
                android:layout_centerInParent="true"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp">

                        <View
                            android:layout_width="8dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:background="#2fa881" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="50dp"
                            android:text="@string/login"
                            android:textColor="@color/orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp">


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#c5c5c5">

                            <EditText
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/mobile_no"
                                android:inputType="phone"
                                android:maxLength="10"
                                android:paddingBottom="2dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#c5c5c5"
                            app:passwordToggleEnabled="true"
                            android:background="@null"
                            android:hint="@null"
                            android:layout_centerInParent="true"
                            app:hintEnabled="false"
                            app:passwordToggleTint="@color/orange">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/Password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="25dp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/bt_go"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bt_shape"
                            android:stateListAnimator="@drawable/state_list_animator_z"
                            android:text="@string/go"
                            android:textColor="@color/colorPrimary"></Button>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/txtForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/forgot_your_password"
                        android:textColor="#9a9a9a"
                        android:textSize="12sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/login_facebook_imgVw"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:tint="@color/orange"
                            android:layout_margin="@dimen/dp10"
                            android:src="@drawable/fb_logo" />

                        <ImageView
                            android:id="@+id/login_google_imgVw"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:tint="@color/orange"
                            android:layout_margin="@dimen/dp10"
                            android:src="@drawable/gplus" />

                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/cv"
                android:layout_alignEnd="@id/cv"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="-20dp"
                android:backgroundTint="@color/orange"
                android:src="@drawable/plus"
                android:transitionName="loginFab"
                app:fabSize="normal" />


        </RelativeLayout>

        <include
            android:id="@+id/loading_view"
            layout="@layout/layout_loader"
            android:visibility="gone"/>

    </FrameLayout>

</layout>